src/test/ui/error-codes/E0081.stderr
error[E0081]: discriminant value `3isize` already exists
  --> $DIR/E0081.rs:13:9
   |
LL |     P = 3,
   |         - first use of `3isize`
LL |     X = 3,
   |         ^ enum already has `3isize`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0081`.
